<resources>
    <string name="app_name">Kiosk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="lang_english">English</string>
    <string name="lang_chinese">中文</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="lang_bahasa">Bahasa Melayu</string>
    <string name="lang_thai">ภาษาไทย</string>

    <string name="welcome">Welcome</string>
    <string name="below_welcome">Press the arrow to start!</string>
    <string name="below_welcome_highlight">Resident card</string>

    <string name="general_wifi_code">Generate WIFI Code</string>
    <string name="enter_the_code_from_the_card">Enter the code from the card</string>
    <string name="enter_code_ex">12345-12345</string>
    <string name="enter_code_generate_ex">AAAA-BBBB-CCCC-D</string>
    <string name="get_wifi_access_code">Get WIFI Access Code</string>
    <string name="show_wifi_access_code">Show WIFI Access Code</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_goto_home">Do you wish to exit without sending sms or printing the code?</string>

    <string name="hello">Hello</string>
    <string name="checking_wifi_code">Checking WIFI Code</string>
    <string name="report_issue">Report Issue</string>
    <string name="sign_out">Sign Out</string>

    <string name="check_code">Check Code</string>
    <string name="enter_the_code">Enter the code</string>

    <string name="generated_code">Generated Code</string>
    <string name="wifi_code">WIFI Code</string>
    <string name="show_wifi_code">Show WIFI Code</string>
    <string name="sms">SMS</string>
    <string name="print">Print</string>

    <string name="your_phone_number">Your phone number</string>
    <string name="enter_phone_ex">i.e. 91234567</string>
    <string name="done">Done</string>
    <string name="exit">Exit</string>

    <string name="success_print">Successfully printed!</string>
    <string name="success_send_sms">Successfully sent SMS!</string>
    <string name="have_problem_print">Having problem with the printer?</string>
    <string name="have_problem_send_sms">Having problem with the sent SMS?</string>

    <string name="report_issue_via_form">Report issue\nvia form</string>
    <string name="report_issue_via_service">Report issue\nvia Service Officer</string>
    <string name="report_issue_time">(Between 5pm-9pm daily)</string>

    <string name="report_issue_form">Report issue (Form)</string>
    <string name="type">Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>

    <string name="thank_you">Thank You!</string>
    <string name="will_contacting">We will be contacting you soon</string>
    <string name="home">Home</string>

    <string name="report_issue_service">Report issue (Voice Call)</string>
    <string name="end">End</string>

    <string name="system">System</string>
    <string name="maintenance">is under\nmaintenance</string>
    <string name="maintenance_hightlight">under\nmaintenance</string>
    <string name="sorry">Sorry for any inconvenience caused!</string>

    <string name="label_reg_1">Placed front view of work permit to camera</string>
    <string name="label_reg_1_underline">front view of work permit</string>
    <string name="label_reg_2">Placed back view of work permit to camera</string>
    <string name="label_reg_2_underline">back view of work permit</string>
    <string name="label_reg_3">Position your Resident Pass to camera position</string>
    <string name="label_barcode">Placed barcode of your worker permit to the front camera</string>
    <string name="barcode">barcode</string>
    <string name="cannot_scan">Unable to scan barcode</string>
    <string name="continue_str">Continue</string>

    <string name="label_reg_4">Please enter your information</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality</string>
    <string name="room">Room</string>
    <string name="passport">Passport No.</string>
    <string name="doe">Date of Expiry</string>
    <string name="fin">FIN</string>
    <string name="fin_label">Enter FIN Number</string>
    <string name="company">Company</string>
    <string name="finish">Finish</string>

    <string name="private_setting">Private Setting</string>
    <string name="register_kiosk">Register Kiosk</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="device_id">Device Id</string>
    <string name="dormitory">Dormitory</string>

    <string name="blank_name">Please enter name.</string>
    <string name="blank_room">Please enter room.</string>
    <string name="blank_passport">Please enter passport number.</string>
    <string name="blank_fin">Please enter FIN.</string>
    <string name="blank_company">Please enter company name.</string>
    <string name="blank_code">Please enter code.</string>
    <string name="blank_phone">Please enter phone number.</string>
    <string name="blank_message">Please enter your message.</string>
    <string name="blank_nation">Please choose your nationality.</string>
    <string name="blank_dormitory">Please choose your dormitory.</string>
    <string name="blank_dob">Please choose your birthday.</string>
    <string name="blank_doe">Please choose your expire date.</string>

    <string name="you_have_plan">You have 1 active plan now</string>
    <string name="your_code">Your code</string>
    <string name="activate_at">Activated Date/Time</string>
    <string name="expired_at">Expiry Date/Time</string>
    <string name="wifi_package">WIFI Package</string>

    <string name="validate_msg">You have entered too many wrong code. Your account will be locked for</string>
    <string name="validate_min">minutes.</string>

    <string name="key_done">DONE</string>
    <string name="try_again">Please try again!</string>
    <string name="invalid_code">Invalid code!</string>

    <string name="search">Search</string>

    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target</string>
    <string name="title_printerseries">Printer Series</string>
    <string name="title_lang">Lang</string>
    <string name="btn_samplereceipt">Sample Receipt</string>
    <string name="btn_samplecoupon">Sample Coupon</string>
    <string name="btn_restart">Restart</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Printer List</string>
    <string name="default_target">TCP:192.168.192.168</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="print_job_id">ABC123</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese1">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai1">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>
    <string name="action_settings1">Settings</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
</resources>
