<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/general_wifi_code_bg" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm_title_margin_left"
        android:layout_marginTop="@dimen/dm_title_margin_top"
        android:text="@string/hello"
        android:textColor="@color/black_dark"
        android:textSize="@dimen/txt_title" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTitle"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@color/black_dark"
        android:textSize="@dimen/txt_80sp" />

    <TextView
        android:id="@+id/txtGeneralWifiCode"
        style="@style/txt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtCheckingWifiCode"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dm_20dp"
        android:background="@drawable/btn_orange_right"
        android:text="@string/general_wifi_code" />

    <TextView
        android:id="@+id/txtCheckingWifiCode"
        style="@style/txt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtReportIssue"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dm_20dp"
        android:background="@drawable/btn_orange_right"
        android:text="@string/checking_wifi_code" />

    <TextView
        android:id="@+id/txtReportIssue"
        style="@style/txt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dm_30dp"
        android:background="@drawable/btn_orange_right"
        android:text="@string/report_issue" />

    <TextView
        android:id="@+id/txtSignOut"
        style="@style/txt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dm_30dp"
        android:background="@drawable/btn_black_left"
        android:text="@string/sign_out" />
</RelativeLayout>