<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dm_50dp"
    android:background="@drawable/corner"
    android:gravity="center"
    android:minWidth="2000dp"
    android:orientation="vertical"
    android:padding="@dimen/dm_20dp">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/edt_gray_stroke_register_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_10dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/confirm_goto_home" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancel"
            style="@style/txt_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_black"
            android:gravity="center"
            android:text="@string/no" />

        <TextView
            android:id="@+id/txtDone"
            style="@style/txt_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm_50dp"
            android:background="@drawable/btn_orange"
            android:gravity="center"
            android:text="@string/yes" />
    </LinearLayout>

</LinearLayout>