<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/general_wifi_code_bg" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm_title_margin_left"
        android:layout_marginTop="@dimen/dm_title_margin_top"
        android:text="@string/report_issue"
        android:textColor="@color/black_dark"
        android:textSize="@dimen/txt_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rltMail"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginBottom="@dimen/dm_30dp"
                android:background="@drawable/btn_orange">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/mail" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtReportViaForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/report_issue_via_form"
                android:textColor="@color/black_txt"
                android:textSize="@dimen/txt_50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rltService"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginBottom="@dimen/dm_30dp"
                android:background="@drawable/btn_orange">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/voice" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtReportViaService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/report_issue_via_service"
                android:textColor="@color/black_txt"
                android:textSize="@dimen/txt_50sp" />

            <TextView
                android:id="@+id/txtReportTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/report_issue_time"
                android:textColor="@color/black_txt"
                android:textSize="@dimen/txt_36sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>